--- a/public/main.css
+++ b/public/main.css
@@ -7,17 +7,20 @@
     --text-gray: #6c7a8b;
     --color-gray: #ECF1F4FF;
 }
-html{height: 100%}
-.h-100{height: 100%}
-body{color:var(--text-color) !important; font-family: 'Open Sans', sans-serif; height: 100%}
+html{height: 100%;}
+.h-100{height: 100%;}
+body{color:var(--text-color) !important; font-family: 'Open Sans', sans-serif; height: 100%;}
 .logo{width: 100%; height: 25px}
 .extra-div{display: none;}
-.bold{font-weight: bolder}
+.bold{font-weight: bolder;}
+.selectable{cursor: pointer!important; }
 /*Overrides*/
-a{color:var(--text-color)}
+.alert {padding: 0.1rem 1.25rem;}
+a{color:var(--text-color);}
 .active{color:var(--second-color) !important;}
 .bg-light{background-color: var(--color-gray) !important;}
 .text-light{ color: var(--text-gray) !important;}
+.form-control{border: 1px solid var(--color-gray);}
 .form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: var(--text-color);
     opacity: 1; /* Firefox */
@@ -25,11 +28,11 @@ a{color:var(--text-color)}
     font-weight: bolder;
 }
 .form-check-input {
-    background-color: var(--third-color) ;
+    background-color: var(--third-color);
     border-color: transparent;
 }
 .form-check-input:checked {
-    background-color: var(--second-color) ;
+    background-color: var(--second-color);
     border-color: transparent;
 }
 .btn-primary {
@@ -40,10 +43,10 @@ a{color:var(--text-color)}
     font-size: 1rem;
 }
 .btn-primary:hover {
-     color: var(--text-color);
-     background-color: var(--color-gray);
-     border-color: transparent;
- }
+    color: var(--text-color);
+    background-color: var(--color-gray);
+    border-color: transparent;
+}
 .btn-primary:active {
     color: var(--text-color);
     background-color: var(--color-gray);
@@ -55,9 +58,7 @@ a{color:var(--text-color)}
     border-color: transparent;
 }
 .btn-primary:focus,
-.btn-primary.focus {
-    box-shadow: 0 0 0 .2rem rgb(158, 162, 162)
-}
+.btn-primary.focus {box-shadow: 0 0 0 .2rem rgb(158, 162, 162);}
 .input-group-text {
     display: flex;
     align-items: center;
@@ -77,7 +78,7 @@ a{color:var(--text-color)}
     background-color: #fff !important;
     border-color: var(--second-color) !important;
     outline: 0;
-    box-shadow: 0 0 0 0.1rem var(--second-color) !important;;
+    box-shadow: 0 0 0 0.1rem var(--second-color) !important;
 }
 .overLabel{
     position: absolute;
@@ -95,10 +96,9 @@ a{color:var(--text-color)}
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
-
 @keyframes fadeInAnimation { 0% {opacity: 0;} 100% {opacity: 1;} }
 /*Media query styles*/
 @media only screen and (min-width: 1180px) {
-    .app-container{max-width: 50%}
-    .extra-div{display: block}
+    .app-container{max-width: 50%;}
+    .extra-div{display: block;}
 }
