--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,7 @@ body{color:var(--text-color) !important; font-family: 'Open Sans', sans-serif; h
 .bold{font-weight: bolder;}
 .selectable{cursor: pointer!important; }
 /*Overrides*/
+.bg-dark{background-color: var(--first-color) !important;}
 .alert {padding: 0.1rem 1.25rem;}
 a{color:var(--text-color);}
 .active{color:var(--second-color) !important;}
@@ -34,6 +35,13 @@ a{color:var(--text-color);}
 .form-check-input:checked {
     background-color: var(--second-color);
     border-color: transparent;
+}
+.btn-secondary {
+    color: var(--text-color);
+    background-color: var(--color-gray);
+    border-color: transparent;
+    font-weight: bolder;
+    font-size: 1rem;
 }
 .btn-primary {
     color: var(--text-color);
@@ -89,6 +97,10 @@ a{color:var(--text-color);}
     padding: 0 5px;
     z-index: 100;
     font-size: .7rem;
+}
+.div40x50{
+    width: 40px;
+    height: 50px;
 }
 /*Animate*/
 .fade-in {
